use node server

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -14,7 +14,7 @@ import Header from './Header.astro'
   </head>
   <body>
     <Header />
-    <main class='min-h-screen bg-primary-light pt-[64px] grid content-center'>
+    <main class='min-h-screen bg-primary-light pt-[64px]'>
       <slot />
     </main>
   </body>
