test handle error

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,5 +10,5 @@ const data = await directus
 ---
 
 <Main>
-  <pre>{JSON.stringify(err || data, null, 2)}</pre>
+  <pre>{JSON.stringify(error || data, null, 2)}</pre>
 </Main>
