--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,3 +1,3 @@
 <header class='p-4 bg-primary-dark text-white fixed w-full'>
-  <h1 class='text-2xl text-center uppercase font-bold'>YOLO mathilde !</h1>
+  <h1 class='text-2xl text-center uppercase font-bold'>YOLO mathilde !!!</h1>
 </header>
