--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,6 +1,6 @@
 ---
 import '@fontsource/comic-neue'
-import Header from './Header.astro'
+import logo from '$public/img/logo-borderless.png'
 ---
 
 <!DOCTYPE html>
@@ -13,8 +13,13 @@ import Header from './Header.astro'
     <title>Dubs apiculture</title>
   </head>
   <body>
-    <Header />
-    <main class='min-h-screen bg-primary-light pt-[64px]'>
+    <!-- <Header /> -->
+    <main class='min-h-screen bg-primary-light'>
+      <img
+        src={logo}
+        alt='Logo dubs-apiculture'
+        class='absolute opacity-10 -left-1/3 rotate-12'
+      />
       <slot />
     </main>
   </body>
