--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -14,11 +14,11 @@ import logo from '$public/img/logo-borderless.png'
   </head>
   <body>
     <!-- <Header /> -->
-    <main class='min-h-screen bg-primary-light'>
+    <main class='min-h-screen w-screen bg-primary-light overflow-x-hidden'>
       <img
         src={logo}
         alt='Logo dubs-apiculture'
-        class='absolute opacity-10 -left-1/3 rotate-12'
+        class='absolute top-1/2 -left-1/4 rotate-12 max-h-[75%] -translate-y-1/2 opacity-20'
       />
       <slot />
     </main>
