--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,3 +1,13 @@
-<header class='p-4 bg-primary-dark text-white fixed w-full'>
-  <h1 class='text-2xl text-center uppercase font-bold'>YOLO mathilde !!!</h1>
+---
+---
+
+<header class='fixed p-4 text-white w-full h-16'>
+  <h1 class='text-2xl text-center uppercase font-bold'></h1>
 </header>
+
+<style>
+  header {
+    background-color: #818cf8;
+    background-image: url(/img/hexagons.svg);
+  }
+</style>
