--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -12,13 +12,12 @@ import logo from '$public/img/logo-borderless.png'
     <meta name='generator' content={Astro.generator} />
     <title>Dubs apiculture</title>
   </head>
-  <body>
-    <!-- <Header /> -->
-    <main class='min-h-screen w-screen bg-primary-light overflow-x-hidden'>
+  <body class='overflow-x-hidden w-screen'>
+    <main class='min-h-screen bg-primary-light'>
       <img
         src={logo}
         alt='Logo dubs-apiculture'
-        class='absolute top-1/2 -left-1/4 rotate-12 max-h-[75%] -translate-y-1/2 opacity-20'
+        class='fixed top-1/2 left-0 rotate-12 max-h-[75%] -translate-y-1/2 -translate-x-1/3 opacity-20'
       />
       <slot />
     </main>
