--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,13 +1,8 @@
 ---
+import Hexagon from '$lib/hexagon/index.astro'
 ---
 
-<header class='fixed p-4 text-white w-full h-16'>
-  <h1 class='text-2xl text-center uppercase font-bold'></h1>
+<header class='fixed text-white w-full h-16 flex p-2'>
+  <div class='flex-1'></div>
+  <Hexagon />
 </header>
-
-<style>
-  header {
-    background-color: #818cf8;
-    background-image: url(/img/hexagons.svg);
-  }
-</style>
