--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -2,7 +2,7 @@
 import Hexagon from '$lib/hexagon/index.astro'
 ---
 
-<header class='fixed text-white w-full h-16 flex p-2'>
+<header class='fixed text-white w-full h-16 flex p-1'>
   <div class='flex-1'></div>
-  <Hexagon />
+  <Hexagon size={56} />
 </header>
