--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,5 +1,5 @@
 ---
-import '@fontsource/comic-neue'
+import '@fontsource/open-sans'
 import logo from '$public/img/logo-borderless.png'
 import Header from './Header.astro'
 ---
@@ -14,8 +14,8 @@ import Header from './Header.astro'
     <title>Dubs apiculture</title>
   </head>
   <body class='overflow-x-hidden w-screen'>
-    <main class='min-h-screen bg-primary-light'>
-      <Header />
+    <Header />
+    <main class='min-h-screen bg-primary-light pt-16'>
       <img
         src={logo}
         alt='Logo dubs-apiculture'
