--- a/src/lib/Resources.astro
+++ b/src/lib/Resources.astro
@@ -1,4 +1,53 @@
 ---
 ---
 
-<h4>HEY</h4>
+<style>
+  p {
+    margin-bottom: 50px;
+  }
+</style>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet soluta rerum
+  repellat? Vel voluptatem temporibus eos harum repellendus minus illo officiis
+  aperiam id quos. Laudantium modi consequuntur odio assumenda. Quis.
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet soluta rerum
+  repellat? Vel voluptatem temporibus eos harum repellendus minus illo officiis
+  aperiam id quos. Laudantium modi consequuntur odio assumenda. Quis.
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet soluta rerum
+  repellat? Vel voluptatem temporibus eos harum repellendus minus illo officiis
+  aperiam id quos. Laudantium modi consequuntur odio assumenda. Quis.
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet soluta rerum
+  repellat? Vel voluptatem temporibus eos harum repellendus minus illo officiis
+  aperiam id quos. Laudantium modi consequuntur odio assumenda. Quis.
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet soluta rerum
+  repellat? Vel voluptatem temporibus eos harum repellendus minus illo officiis
+  aperiam id quos. Laudantium modi consequuntur odio assumenda. Quis.
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet soluta rerum
+  repellat? Vel voluptatem temporibus eos harum repellendus minus illo officiis
+  aperiam id quos. Laudantium modi consequuntur odio assumenda. Quis.
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet soluta rerum
+  repellat? Vel voluptatem temporibus eos harum repellendus minus illo officiis
+  aperiam id quos. Laudantium modi consequuntur odio assumenda. Quis.
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet soluta rerum
+  repellat? Vel voluptatem temporibus eos harum repellendus minus illo officiis
+  aperiam id quos. Laudantium modi consequuntur odio assumenda. Quis.
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet soluta rerum
+  repellat? Vel voluptatem temporibus eos harum repellendus minus illo officiis
+  aperiam id quos. Laudantium modi consequuntur odio assumenda. Quis.
+</p>
