--- a/src/lib/hexagon/index.astro
+++ b/src/lib/hexagon/index.astro
@@ -3,12 +3,11 @@ import colors from 'tailwindcss/colors'
 import { hexagon } from './path'
 
 export interface Props {
-  width?: number
-  height?: number
+  size?: number
   color?: string
 }
 
-const { width, height, color } = Astro.props
+const { size, color } = Astro.props
 
 const defaultSize = 60
 const defaultColor = colors.indigo[400]
@@ -16,8 +15,8 @@ const defaultColor = colors.indigo[400]
 
 <svg
   xmlns='http://www.w3.org/2000/svg'
-  width={width || defaultSize}
-  height={height || defaultSize}
+  width={size || defaultSize}
+  height={size || defaultSize}
   viewBox={`0 0 ${hexagon.viewWidth} ${hexagon.viewHeight}`}
 >
   <path d={hexagon.d} fill={color || defaultColor}></path>
