--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Main from '$layouts/Main.astro'
-import Resources from '$lib/Resources.astro'
+import Resources from '$lib/resources/index.astro'
 ---
 
 <Main>
