--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,8 +1,8 @@
 ---
-import Hexagon from '$lib/hexagon/index.astro'
+import MenuIcon from '$lib/menu/Icon.astro'
 ---
 
-<header class='fixed text-white w-full h-16 flex p-1'>
+<header class='fixed w-full h-16 flex p-1 items-center z-10'>
   <div class='flex-1'></div>
-  <Hexagon size={56} />
+  <MenuIcon size={42} />
 </header>
