--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,5 +1,5 @@
 ---
-import '@fontsource/open-sans'
+import '@fontsource/dosis'
 import Header from './Header.astro'
 ---
 
@@ -14,7 +14,7 @@ import Header from './Header.astro'
   </head>
   <body class='overflow-x-hidden w-screen'>
     <Header />
-    <main class='min-h-screen bg-primary pt-[72px] overflow-x-hidden'>
+    <main class='min-h-screen bg-primary-light pt-[72px] overflow-x-hidden'>
       <img
         src='/img/logo-borderless.png'
         alt='Logo dubs-apiculture'
