Gallery is a component

--- a/src/lib/resources/index.astro
+++ b/src/lib/resources/index.astro
@@ -16,7 +16,7 @@ const { data: flows } = await directus
   .readByQuery({ limit: -1 }, expendFields)
 ---
 
-<div class='max-w-4xl px-2 mx-auto'>
+<div class='max-w-3xl px-2 pb-16 mx-auto'>
   {
     resources && flows && (
       <Card
