use directive to detect scroll position

--- a/src/lib/resources/index.astro
+++ b/src/lib/resources/index.astro
@@ -20,6 +20,7 @@ const { data: flows } = await directus
   {
     resources && flows && (
       <ResourceCard
+        client:load
         resourceId={1}
         resources={resources as Resource[]}
         flows={flows as Flow[]}
