--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,8 +1,8 @@
 ---
-import MenuIcon from '$lib/menu/Icon.astro'
+import Menu from '$lib/menu/index.astro'
 ---
 
 <header class='fixed w-full h-16 flex p-1 items-center z-10'>
   <div class='flex-1'></div>
-  <MenuIcon size={42} />
+  <Menu size={42} />
 </header>
