--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -2,7 +2,7 @@
 import Menu from '$lib/menu/index.astro'
 ---
 
-<header class='fixed w-full h-16 flex p-1 items-center z-10'>
+<header class='fixed w-full flex p-2 items-center z-10'>
   <div class='flex-1'></div>
   <Menu size={42} />
 </header>
