--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Menu from '$lib/menu/index.astro'
+import { Menu } from '$lib/menu/index'
 ---
 
 <header class='fixed w-full flex p-2 items-center z-10'>
