transition animation is great

--- a/src/pages/lab.astro
+++ b/src/pages/lab.astro
@@ -5,6 +5,6 @@ import Main from '$src/layouts/Main.astro'
 
 <Main>
   <div class='drop-shadow-none grid place-items-center'>
-    <Menu size={400} client:visible />
+    <Menu size={400} client:load />
   </div>
 </Main>
