--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -4,5 +4,5 @@ import { Menu } from '$lib/menu/index'
 
 <header class='fixed w-full flex p-2 items-center z-10'>
   <div class='flex-1'></div>
-  <Menu size={42} />
+  <Menu size={42} client:load />
 </header>
