Explore ruch config

--- a/src/pages/lab.astro
+++ b/src/pages/lab.astro
@@ -4,7 +4,7 @@ import Main from '$src/layouts/Main.astro'
 ---
 
 <Main>
-  <div class='drop-shadow-none grid place-items-center'>
-    <Menu size={400} client:load />
+  <div class='drop-shadow-none grid place-items-center h-screen'>
+    <Menu size={100} client:load />
   </div>
 </Main>
