draw and repeat patern functions

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -14,7 +14,7 @@ import Header from './Header.astro'
   </head>
   <body class='overflow-x-hidden w-screen'>
     <Header />
-    <main class='min-h-screen bg-primary pt-[72px] overflow-x-hidden'>
+    <main class='min-h-screen pt-[72px] overflow-x-hidde bg-secondary-light'>
       <img
         src='/img/logo-borderless.png'
         alt='Logo dubs-apiculture'
