--- a/src/pages/lab.astro
+++ b/src/pages/lab.astro
@@ -1,5 +1,5 @@
 ---
-import { Menu } from '$lib/menu/index'
+import { Menu } from '$lib/hexagon/Menu'
 import Main from '$src/layouts/Main.astro'
 ---
 
