--- a/site/src/layouts/Header.astro
+++ b/site/src/layouts/Header.astro
@@ -2,11 +2,11 @@
 import { Menu } from '$lib/hexagon/Menu'
 ---
 
-<header class='fixed w-full flex p-2 items-center z-10'>
+<header class='fixed w-full h-0 flex p-2 z-10'>
   <div class='flex-1'></div>
   <Menu size={52} client:load buttons={[
     {label: 'labo', href: '/lab'},
-    {label: 'graph', href: '/graph'},
+    {label: 'edit', href: '/edit'},
     {label: 'admin', href: '/admin'},
     {label: 'admin', href: '/admin'},
     {label: 'admin', href: '/admin'},
