--- a/site/src/layouts/Main.astro
+++ b/site/src/layouts/Main.astro
@@ -16,13 +16,15 @@ import Header from './Header.astro'
   <body class='overflow-x-hidden w-screen'>
     <Header />
 
-    <main class='min-h-screen pt-[72px] overflow-x-hidde'>
-
-        <img
-          src='/img/logo-borderless.png'
-          alt='Logo dubs-apiculture'
-          class='fixed top-1/2 left-0 rotate-12 max-h-[75%] -translate-y-1/2 -translate-x-1/3 opacity-20'
-        />
+    <main class='min-h-screen overflow-x-hidde'><!-- pt-[72px] -->
+        <!--
+          
+          <img
+            src='/img/logo-borderless.png'
+            alt='Logo dubs-apiculture'
+            class='fixed top-1/2 left-0 rotate-12 max-h-[75%] -translate-y-1/2 -translate-x-1/3 opacity-20'
+          />
+         -->
   
         <slot />
     </main>
