Implement logical input/output in backend

--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -4,5 +4,6 @@ import Resources from '$lib/resource/index.astro'
 ---
 
 <Main>
+  <h3 class="text-3xl text-center p-4">Hey, c'est un peu vide ici 😅</h3>
   <Resources />
 </Main>
