--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,14 +1,5 @@
-@import url('https://fonts.cdnfonts.com/css/dosis');
+@import url('/dosis.css');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@font-face {
-  font-family: Dosis, ui-sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-    'Noto Color Emoji';
-  src: url('https://fonts.cdnfonts.com/css/dosis');
-  font-display: swap;
-}
