--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,4 +1,4 @@
-@import url('/dosis.css');
+@import url('https://fonts.googleapis.com/css?family=Dosis:400,700&display=swap');
 
 @tailwind base;
 @tailwind components;
